# SmartUser

./: LICENSE  README.md  pyproject.toml
src/smartuser/: smartuser.py
